--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.11",
-    "three": "^0.104.0"
+    "three": "^0.104.0",
+    "three-orbitcontrols": "^2.102.1"
   }
 }
