--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "dependencies": {
     "lodash": "^4.17.11",
     "three": "^0.104.0",
-    "three-orbitcontrols": "^2.102.1"
+    "three-dragcontrols": "^0.88.2",
+    "three-orbitcontrols": "^2.102.1",
+    "three-transformcontrols": "^0.78.1"
   }
 }
